<resources>
    <string name="app_name">Birthdroid</string>
    <string name="preferences_name">Birthdroid preferences</string>
    <string name="about_name">About Birthdroid</string>
    <string name="upcoming_birthday">will be %1$d %2$s</string>
    <string name="upcoming_no_age">celebrates birthday %1$s</string>
    <string name="event_today">today</string>
    <string name="event_tomorrow">tomorrow</string>
    <plurals name="event_days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="born_today">was born today</string>
    <string name="no_leap_year">(This is no leap year, but surely celebrates anyway ;)</string>
    <string name="no_birthdays">No birthdays in contacts</string>
    <string name="no_upcoming_birthdays">No upcoming birthdays...</string>
    <string name="anniversary">anniversary</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="prefs_title_general">General</string>
    <string name="prefs_title_app">Application</string>
    <string name="prefs_title_widget">Widget</string>
    <string name="prefs_title_scan">Contact scan interval</string>
    <string name="prefs_title_avatar">Show avatar</string>
    <string name="prefs_title_sort_method">Sort by...</string>
    <string name="prefs_title_days">Foresight period</string>
    <string name="prefs_title_layout_settings">Layout settings</string>
    <string name="prefs_title_flip_interval">Flip cycle interval</string>
    <string name="prefs_title_widget_clickable">Widget clickable?</string>
    <string name="prefs_summary_scan">Scan contacts for new birthdays every n hours</string>
    <string name="prefs_summary_avatar">Load image from contacts and display it</string>
    <string name="prefs_summary_sort_method">How to sort order of results</string>
    <string name="prefs_summary_days">Display birthdays in the next n days</string>
    <string name="prefs_summary_layout_settings">Adjust layout settings</string>
    <string name="prefs_summary_flip_interval">Flip to next contact every n seconds</string>
    <string name="prefs_summary_widget_clickable">Open Birthdroid upon click on widget?</string>
    <string name="sorting_days_left">days left</string>
    <string name="sorting_age_of_person">age of person</string>
    <string name="about_copyright">2011-2015 © Daniel Hiepler</string>
    <string name="about_url" translatable="false">http://github.com/rigid/Birthdroid</string>
    <string name="about_description">Simple application to show upcoming birthdays.</string>
    <string name="about_changes" translatable="false">
\n* v0.6.4\n
- french translation - thanks to eliovir\n
- bugfix\n
\n* v0.6.3\n
- use proguard in f-droid to get smaller .apk package\n
\n* v0.6.2\n
- added appcompat library, so ActionBar can be used to enable devices without physical menu button to access the menu. Thanks to exploidex for reporting.\n
- adapted layout to newly added ActionBar\n
- minor code changes\n
\n* v0.6.1\n
- support birthdays that don\'t have a year set\n
\n* v0.6\n
- update widget when leaving activity\n
\n* v0.5\n
- make date parsing stricter (to exclude invalid dates)\n
- added special message for leap year cases\n
\n* v0.4\n
- added option to open app upon click on widget\n
- fixed wrong DateFormat detection on Android 2.3.x\n
\n* v0.3\n
- fixed bug in AgeComparator that gave wrong results when sorting-by-age\n
- moved to github\n
- minor cleanups\n
\n* v0.2\n
- bugfixes\n
\n* v0.1 beta\n
- initial beta release\n
    </string>
</resources>