<?xml version="1.0" encoding="utf-8"?>
<!--
 Birthdroid - Android upcoming birthday App/Widget
 Copyright (C) 2011-2015 Daniel Hiepler <daniel@niftylight.de>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_title_general">

        <EditTextPreference
            android:defaultValue="24"
            android:enabled="false"
            android:inputType="number"
            android:key="birthdays_scan_interval"
            android:summary="@string/prefs_summary_scan"
            android:title="@string/prefs_title_scan" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_title_app">

        <CheckBoxPreference
            android:defaultValue="@string/birthdroid_avatars"
            android:enabled="false"
            android:key="birthdroid_avatars"
            android:summary="@string/prefs_summary_avatar"
            android:title="@string/prefs_title_avatar" />

        <ListPreference
            android:defaultValue="@string/birthdroid_sort_method"
            android:entries="@array/sort_method_entries"
            android:entryValues="@array/sort_method_values"
            android:key="birthdroid_sort_method"
            android:summary="@string/prefs_summary_sort_method"
            android:title="@string/prefs_title_sort_method" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_title_widget">

        <EditTextPreference
            android:defaultValue="@integer/widget_future_days"
            android:inputType="number"
            android:key="widget_future_days"
            android:summary="@string/prefs_summary_days"
            android:title="@string/prefs_title_days" />

        <CheckBoxPreference
            android:defaultValue="@string/widget_clickable"
            android:key="widget_clickable"
            android:summary="@string/prefs_summary_widget_clickable"
            android:title="@string/prefs_title_widget_clickable" />

        <PreferenceScreen
            android:key="widget_layout_screen"
            android:summary="@string/prefs_summary_layout_settings"
            android:title="@string/prefs_title_layout_settings">

            <CheckBoxPreference
                android:defaultValue="@string/widget_avatars"
                android:enabled="false"
                android:key="widget_avatars"
                android:summary="@string/prefs_summary_avatar"
                android:title="@string/prefs_title_avatar" />

            <EditTextPreference
                android:defaultValue="@integer/widget_flip_interval"
                android:inputType="number"
                android:key="widget_flip_interval"
                android:summary="@string/prefs_summary_flip_interval"
                android:title="@string/prefs_title_flip_interval" />

            <ListPreference
                android:defaultValue="@string/widget_sort_method"
                android:entries="@array/sort_method_entries"
                android:entryValues="@array/sort_method_values"
                android:key="widget_sort_method"
                android:summary="@string/prefs_summary_sort_method"
                android:title="@string/prefs_title_sort_method" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
